--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
       });
     });
   </script>
+  <script src="main.dart.js" type="application/javascript"></script>
   <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
